# datia-synth

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
datia_synth/: __init__.py  crypto.py  generator.py  validator.py
